# kizuki

./: .gitignore  AGENTS.md  COMMERCIAL-LICENSE.md  GEMINI.md  LICENSE  README.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: main.yml
config/: package.json  project.config.d.ts
desktop/: index.js  package-lock.json  package.json
helpers/fetch-feed/: package-lock.json  package.json
helpers/fetch-links/: .gitignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json
helpers/fetch-links/scripts/: fetch-links.js
helpers/fetch-links/src/: lib.rs
helpers/fetch-links/tests/: integration_test.rs
scripts/: install.js
server/: global.d.ts  package-lock.json  package.json
server/src/: main.test.ts  main.ts  server.test.ts  server.ts  updater.test.ts  updater.ts
server/src/helpers/: MediumFeedResolver.test.ts  MediumFeedResolver.ts  YouTubeFeedResolver.ts  (+3 more)
tui/: jest.config.js  package-lock.json  package.json  tsconfig.json
tui/src/: App.tsx  index.tsx
webapp/: global.d.ts  package-lock.json  package.json  tsconfig.json  vite.config.mts
webapp/src/: App.tsx  FeedAdd.tsx  FeedCategoriesMain.test.tsx  FeedCategoriesMain.tsx  FeedCategoriesRaw.tsx  FeedCategoryEdit.tsx  FeedCategoryList.tsx  FeedEdit.tsx  FeedOpmlOps.tsx  FeedsList.tsx  FeedsMain.tsx  Home.tsx  ItemCategoriesMain.test.tsx  ItemCategoriesMain.tsx  ItemCategoryEdit.tsx  ItemCategoryList.tsx  ItemsPrompt.tsx  ItemsSearch.tsx  Settings.tsx  SettingsSubNavigation.test.tsx  index.css
(+82 files in other folders)
