[package]
name = "fetch-links"
version = "0.1.0"
edition = "2021"

[features]
default = []
napi-export = ["napi", "napi-derive", "napi-build"]

[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
scraper = "0.20"
url = "2"
napi = { version = "3", default-features = false, features = ["napi4", "tokio_rt"], optional = true }
napi-derive = { version = "3", optional = true }

[dev-dependencies]
httpmock = "0.6"

[lib]
name = "fetch_links"
crate-type = ["cdylib", "lib"]

[build-dependencies]
napi-build = { version = "1", optional = true }
